--- a/problems/patterns/3_alle_patterns.ipynb
+++ b/problems/patterns/3_alle_patterns.ipynb
@@ -5,7 +5,7 @@
    "id": "8d7c972b",
    "metadata": {},
    "source": [
-    "# Opgave 2 Alle design patterns"
+    "# Opgave 3 Alle design patterns"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.13+8-Ubuntu-0ubuntu1.20.04"
+   "version": "11.0.17+8-post-Ubuntu-1ubuntu220.04"
   }
  },
  "nbformat": 4,
