adjust project link

--- a/problems/patterns/2_alle_patterns_mvc.ipynb
+++ b/problems/patterns/2_alle_patterns_mvc.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "Gegeven een project Game of life met een implementatie van de Conway's Game of Life (https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life)\n",
     "\n",
-    "Download link: <a href=\"../projects/gameoflife.zip\">nbody.zip</a>\n",
+    "Download link: <a href=\"../../projects/gameoflife.zip\">nbody.zip</a>\n",
     "\n",
     "De applicatie functioneert.\n",
     "\n",
