Readme toevoegd om het opstarten van de notebooks wat duidelijker te maken.

--- a/topics/3a_lussen_en_strings.ipynb
+++ b/topics/3a_lussen_en_strings.ipynb
@@ -68,7 +68,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -157,7 +160,7 @@
     "\n",
     "Aangezien `n` soms toeneemt en soms afneemt, is er geen voor de hand liggend bewijs dat `n` ooit 1 zal bereiken en dat het programma ooit zal eindigen. Voor sommige waarden van `n`, zoals machten van twee, kunnen we bewijzen dat het programma eindigt.\n",
     "\n",
-    "De moeilijke vraag is dus of dit programma eindigt voor {alle} waarden van `n`. Tot nu toe is niemand er in geslaagd om dit te bewijzen of te weerleggen! Zie voor meer informatie \n",
+    "De moeilijke vraag is dus of dit programma eindigt voor *alle* waarden van `n`. Tot nu toe is niemand er in geslaagd om dit te bewijzen of te weerleggen! Zie voor meer informatie \n",
     "Voor meer informatie over dit probleem het [vermoeden van Collatz](https://nl.wikipedia.org/wiki/Vermoeden_van_Collatz).\n",
     "\n",
     "Het vakgebied informatica is geïnteresseerd in dit soort vragen, omdat de antwoorden daarop inzicht geven in de grenzen van wat computers wel en niet kunnen."
@@ -186,7 +189,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -219,7 +225,7 @@
     "tags": []
    },
    "source": [
-    "Aan het einde van elke iteratie wordt de teller `i` met 1 verhoogd tot de conditie `i < 5` waar is. Je ziet hier `i++` gebruikt worden om `i` met 1 te incrementeren. Dit is niet de enige mogelijke syntax voor deze operatie."
+    "Aan het einde van elke iteratie wordt de teller `i` met 1 verhoogd zolang de conditie `i <= 5` waar is. Je ziet hier `i++` gebruikt worden om `i` met 1 te incrementeren. Dit is niet de enige mogelijke syntax voor deze operatie."
    ]
   },
   {
@@ -279,7 +285,7 @@
     "tags": []
    },
    "source": [
-    "Drie varianten zijn dus mogelijk om dezelde handeling uit te drukken. Misschien zelfs een vierde want `++n` (of `--n`) is ook mogelijk!"
+    "Drie varianten zijn dus mogelijk om dezelde handeling uit te drukken. Misschien zelfs een vierde, want `++n` (of `--n`) is ook mogelijk!"
    ]
   },
   {
@@ -305,7 +311,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -322,7 +331,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -348,7 +360,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -389,7 +404,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -404,7 +422,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -443,7 +464,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -482,7 +506,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -497,7 +524,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -536,7 +566,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -625,7 +658,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -825,7 +861,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -853,7 +892,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -892,7 +934,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -935,7 +980,7 @@
    "source": [
     "### Unicode\n",
     "\n",
-    "[Unicode](https://nl.wikipedia.org/wiki/Unicode) is een superset van [ASCII](https://nl.wikipedia.org/wiki/ASCII_(tekenset)\n",
+    "[Unicode](https://nl.wikipedia.org/wiki/Unicode) is een superset van [ASCII](https://nl.wikipedia.org/wiki/ASCII_(tekenset).\n",
     "\n",
     "![ASCII table](images/3/ascii_table.png)"
    ]
@@ -974,7 +1019,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -989,7 +1037,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -1004,7 +1055,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -1019,7 +1073,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1086,7 +1143,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -1101,7 +1161,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1140,7 +1203,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -1159,7 +1225,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1213,7 +1282,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1239,7 +1311,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1265,7 +1340,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1304,7 +1382,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1330,7 +1411,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1356,7 +1440,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1408,7 +1495,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -1424,7 +1514,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1463,7 +1556,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1515,7 +1611,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -1531,7 +1630,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1557,7 +1659,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
